# music-release-notifier

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/routes/: admin.py  spotify_search.py  subscribe.py
backend/app/core/: config.py  spotify_client.py
backend/app/db/: beanie_db.py  mongo.py  mongoengine_db.py
backend/app/middleware/: __init__.py  error_handler.py  http_middleware.py
backend/app/models/: beanie_models.py  mongoengine_models.py  notification.py  spotify.py  user.py  user_response.py  user_update.py
backend/app/schema/: notification.py  user.py
backend/app/services/: email_sender.py  notifier.py  sms_sender.py  telegram_sender.py
backend/app/utils/: logger.py  scheduler.py
backend/tests/: test_email_sender.py  test_spotify.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.vue  config.js  main.js
frontend/src/components/: ArtistSearch.vue  SubscribeForm.vue
